--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^17.3.0",
     "@ngrx/store": "^17.2.0",
     "bootstrap": "^5.3.3",
+    "lodash": "^4.17.21",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -30,6 +31,7 @@
     "@angular/compiler-cli": "^17.3.0",
     "@ngrx/schematics": "^19.0.1",
     "@types/jasmine": "~5.1.0",
+    "@types/lodash": "^4.17.15",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
